work through sonar qube issues