@@ -23,6 +23,7 @@ import io.mapsmessaging.logging.Logger;
 import io.mapsmessaging.security.certificates.CertificateManager;
 import io.mapsmessaging.security.certificates.CertificateManagerFactory;
 import java.io.IOException;
+import java.net.URI;
 import java.net.URL;
 import java.security.*;
 import java.security.cert.CertificateException;
@@ -126,7 +127,8 @@ public class SslHelper {
       String crlUrlPath = config.getProperty("crlUrl");
       if(crlUrlPath != null && !crlUrlPath.isEmpty()){
         List<TrustManager> trustManagerList = Arrays.asList(trustManagers);
-        CertificateRevocationManager certificateRevocationManager = new CertificateRevocationManager(new URL(crlUrlPath), config.getLongProperty("crlInterval", 60*60*24)); // Default daily
+        URL crlUrl = URI.create(crlUrlPath).toURL();
+        CertificateRevocationManager certificateRevocationManager = new CertificateRevocationManager(crlUrl, config.getLongProperty("crlInterval", 60*60*24)); // Default daily
         trustManagerList.add(new CrlTrustManager(certificateRevocationManager));
         trustManagers = trustManagerList.toArray(trustManagers);
       }
